
WIP      Full Extranafart for ROMs.


WIP      Support for multidisc systems. Have a look at old AL launcher code.


[B]Advanced Emulator Launcher | version 0.9.5~beta2 | xx December 2016[/B]

FIX      Fixed crash when scanning ROMs and the asset scraper is ON.

FIX      Improved ROM scanner debug output. Will make it easier to read scanner logs.


[B]Advanced Emulator Launcher | version 0.9.5~beta1 | 13 December 2016[/B]

FEATURE  New Arcade Database online metadata/asset scraper for MAME ROMs.

FEATURE  Support for several arguments in launcher. This will be useful when using MAME for
         console emulation (MAME consoles from a different region have different names, and an
         European console will typically refuse to run a Japanese game).
         Survey about this: http://forum.kodi.tv/showthread.php?tid=287826&pid=2467547#pid2467547

FEATURE  New command SHOW_ALL_ROMS to render all ROMs in all launchers. Will be used by skins.

FEATURE  Supend/resume Kodi audio engine at launching. This will prevent sound problems in Linux. 
         Include a setting for this in addons "Settings" --> "Advanced".

FEATURE  Export/Import assets/artwork in ROM Collections. Encode binary files in base64 and put
         in an auxiliar JSON files. Exporting assets should be optional, not mandatory.

FEATURE  Extranafart for ROM Collections.

FEATURE  All requests are cached in TheGamesDB scraper.

FEATURE  All requests are cached in GameFAQs scraper.

FEATURE  All requests are cached in MobyGames scraper.

FEATURE  Resolve image URL for online asset scrapers. This will increase scraping speed a lot.
         Requires a change in the scraping API.

FEATURE  TheGamesDB scraper now returns Titles and Snaps. However, since there is no difference
         between Titles, Snaps and shots in TheGamesDB this only is useful when doing manual
         scraping.

FEATURE  Improve message reporting in Kodi GUI when scanning ROMs.
