@@ -47,6 +47,12 @@ FIX      Fixed crash when scanning ROMs and the asset scraper is ON.
 
 FIX      Improved ROM scanner debug output. Will make it easier to read scanner logs.
 
+FIX      Fixed crash in "Edit Launcher" -> "Manage ROM List" -> "Rescan ROMs local assets"
+         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2479446#pid2479446
+
+FIX      Fixed crash when adding single ROM.
+         http://forum.kodi.tv/showthread.php?tid=287826&pid=2484522#pid2484522
+
 
 [B]Advanced Emulator Launcher | version 0.9.5~beta1 | 13 December 2016[/B]
 
